<resources>
    <string name="app_name">Labo1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hr_form_text">HR_form</string>
    <string name="name_label">Name:</string>
    <string name="name_hint">e.g. Carlos</string>
    <string name="lastname_label">Lastname:</string>
    <string name="lastname_hint">e.g. Cortez</string>
    <string name="age_hint">e.g. 20</string>
    <string name="age_label">Age</string>
    <string name="email_label">Email</string>
    <string name="email_hint">e.g. 000204119@uca.edu.sv</string>
    <string name="name_template">Name: %1$s %2$s</string>
    <string name="age_template">Age: %1$s</string>
    <string name="email_template">Email: %1$s</string>
</resources>